--- a/apps/erp-prototype/package.json
+++ b/apps/erp-prototype/package.json
@@ -30,7 +30,7 @@
     "build": "npm run version:generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "version:generate": "node -e \"const fs=require('fs');const v=require('./package.json').version;const h=require('child_process').execSync('git rev-parse --short HEAD').toString().trim();fs.writeFileSync('.env.local',fs.readFileSync('.env.local','utf8').replace(/NEXT_PUBLIC_APP_VERSION=.*/,'')+'NEXT_PUBLIC_APP_VERSION=v'+v+'-'+h+'\\n')\""
+    "version:generate": "node -e \"const fs=require('fs');const v=require('./package.json').version;let h='dev';try{h=require('child_process').execSync('git rev-parse --short HEAD').toString().trim()}catch(e){}fs.writeFileSync('.env.local','NEXT_PUBLIC_APP_VERSION=v'+v+'-'+h+'\\n')\""
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
