--- a/apps/erp-prototype/package.json
+++ b/apps/erp-prototype/package.json
@@ -26,9 +26,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
+    "dev:bun": "bun --bun run dev",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "npm run version:generate && next build",
+    "build:bun": "bun run version:generate && bun --bun run build",
     "start": "next start",
+    "start:bun": "bun --bun run start",
     "lint": "eslint",
     "version:generate": "node -e \"const fs=require('fs');const v=require('./package.json').version;const t=new Date().toISOString();let h='dev';try{h=require('child_process').execSync('git rev-parse --short HEAD').toString().trim()}catch(e){}fs.writeFileSync('.env.local','NEXT_PUBLIC_APP_VERSION=v'+v+'-'+h+'\\nNEXT_PUBLIC_BUILD_TIME='+t+'\\n')\""
   },
