--- a/apps/erp-prototype/package.json
+++ b/apps/erp-prototype/package.json
@@ -25,9 +25,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev -p 3200",
     "dev:bun": "bun --bun run dev",
-    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev -p 3200",
     "build": "npm run version:generate && next build",
     "build:bun": "bun run version:generate && bun --bun run build",
     "start": "next start",
