--- a/apps/erp-prototype/tsconfig.json
+++ b/apps/erp-prototype/tsconfig.json
@@ -20,7 +20,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@spark/core": ["../../packages/spark-core/index.ts"],
+      "@spark/core/*": ["../../packages/spark-core/*"]
     }
   },
   "include": [
