--- a/apps/erp-prototype/package.json
+++ b/apps/erp-prototype/package.json
@@ -36,6 +36,7 @@
     "version:generate": "node -e \"const fs=require('fs');const v=require('./package.json').version;const t=new Date().toISOString();let h='dev';try{h=require('child_process').execSync('git rev-parse --short HEAD').toString().trim()}catch(e){}fs.writeFileSync('.env.local','NEXT_PUBLIC_APP_VERSION=v'+v+'-'+h+'\\nNEXT_PUBLIC_BUILD_TIME='+t+'\\n')\""
   },
   "dependencies": {
+    "@spark/core": "workspace:*",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
