--- a/packages/spark-core/package.json
+++ b/packages/spark-core/package.json
@@ -39,7 +39,9 @@
     "next-intl": "*",
     "date-fns": "*",
     "date-fns-tz": "*",
-    "sonner": "*"
+    "sonner": "*",
+    "nuqs": "^2.8.8",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@dnd-kit/core": "^6.3.1",
